tests/ui/rfc-2632-const-trait-impl/call-const-trait-method-fail.stderr
error[E0277]: the trait bound `u32: ~const Plus` is not satisfied
  --> $DIR/call-const-trait-method-fail.rs:25:7
   |
LL |     a.plus(b)
   |       ^^^^ the trait `~const Plus` is not implemented for `u32`
   |
note: the trait `Plus` is implemented for `u32`, but that implementation is not `const`
  --> $DIR/call-const-trait-method-fail.rs:25:7
   |
LL |     a.plus(b)
   |       ^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
